[package]
name = "dumq-amqp"
version = "0.1.0"
edition = "2021"
description = "AMQP 1.0 protocol implementation in Rust"
license = "MIT"
repository = "https://github.com/yourusername/dumq-amqp"
keywords = ["amqp", "messaging", "protocol", "async"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "producer"
path = "examples/producer.rs"

[[example]]
name = "consumer"
path = "examples/consumer.rs"

[[example]]
name = "encoding_decoding"
path = "examples/encoding_decoding.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "simple_broker"
path = "examples/simple_broker.rs"

[[example]]
name = "publisher"
path = "examples/publisher.rs"

[[example]]
name = "network_connection"
path = "examples/network_connection.rs"
